# lections_2020

./: .gitignore  01_vector_usage.cpp  LICENSE  README.md
cpp_algo/lec_01/: 2_euclid.py  3_goto_nightmare.cpp
cpp_algo/lec_02/: 1_bits.cpp
cpp_algo/lec_03/: expressions.cpp
cpp_algo/lec_04/: 1_func_params.cpp  2_func_params.cpp  4_struct_to_function.cpp  8_Eratosthenes.cpp
cpp_algo/lec_05/: 2_reverse.cpp  3_append.cpp  4_stack.cpp  5_check_sorted.cpp  6a_fool_asympotic.cpp  7_bubble.cpp
cpp_algo/lec_06/: 2_structs.cpp  4_new.cpp
cpp_algo/lec_07/: 1_array1d.cpp  2_array2d.cpp  2_array2d.s  3_array_param.cpp  6_dynamical.cpp  7_dynamical.cpp
cpp_algo/lec_08/: bin_search.cpp  count_sort.cpp
cpp_algo/lec_09/: 1_factorial.cpp  2_main.cpp  3_euclid.cpp  4_hanoi.cpp  5_bin_gen.cpp
cpp_algo/lec_12/: 1_ant.cpp  2_ant_array.cpp  3_bagpack.cpp
cpp_algo/lec_13/: 2_strcat_solution.cpp  3_levenstein.cpp
cpp_algo/lec_21/cmake_project/: CMakeLists.txt  Makefile  cmake_install.cmake  mylib.h
lec_01/: 1_bot.cpp  1_bot.py  2_euclid.cpp  hello.cpp  in.txt  out.txt
lec_04/: 1_func_params.cpp  2_func_params.cpp  3_struct.cpp  4_struct_to_function.cpp  5_sizeof.cpp  6_reinterpret.cpp  7_segfault.cpp  8_arrays_operations.cpp
lec_05/: 6_fool.cpp
lec_06/: 3_malloc.c
lec_07/: 4_array_param.cpp  5_linearized_manually.cpp
lec_08/: lin_search.cpp  radix_sort.cpp
lec_10/: 1_permutations.cpp  2_merge_sort.cpp
lec_11/: 1_fibonacci.cpp  2_hopper_economist.cpp
lec_12/: 3_bagpack.cpp  input_data.txt
lec_13/: 1_strcat_problem.cpp
python/: 01_hierarchy.py
(+53 files in other folders)
